m3s-mm-api-gke/04-ingress.yaml
# GKE Ingress menggunakan Google Cloud Load Balancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mm-api
  namespace: m3s-mm-api
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "mm-api-cert"
    kubernetes.io/ingress.global-static-ip-name: "m3s-mm-api-ip"
spec:
  rules:
    - host: mm-m3sbri-api.pcsindonesia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mm-api
                port:
                  number: 8002
