m3s-mm-api-gke/07-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mm-api-network-policy
  namespace: m3s-mm-api
spec:
  podSelector:
    matchLabels:
      app: mm-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 8002
          protocol: TCP
  egress:
    - to: []
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 10.20.0.5/32
      ports:
        - port: 3306
          protocol: TCP
    - to: []
      ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
